--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -6,16 +6,17 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
                 <address itemscope itemtype="http://schema.org/Organization">
-                    <h3><i class="fa fa-envelope-square"></i><span class="invisible"> </span><strong itemprop="name">Albatros Club de Plage</strong></h3>
+                    <h3 class="h2"><i class="fa fa-envelope-square"></i><span class="invisible"> </span><strong itemprop="name">Albatros Club de Plage</strong></h3>
                     <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <span itemprop="streetAddress">Grande Plage de Quiberon<br />Boulevard Chanard</span><br>
-                        <span itemprop="postalCode">56170</span><br>
-                        <span itemprop="addressLocality">Quiberon, France</span><br>
+                        <span class="h3" itemprop="streetAddress">Grande Plage de Quiberon<br />Boulevard Chanard</span><br>
+                        <span class="h3" itemprop="postalCode">56170</span><br>
+                        <span class="h3" itemprop="addressLocality">Quiberon, France</span><br>
                     </span>
                     <hr class="separator">
-                    <i class="fa fa-phone-square"></i> Juillet: <span itemprop="telephone">(33 6) 61 34 18 64 </span><br>
-                    <i class="fa fa-phone-square"></i> Août: <span itemprop="telephone">(33 6) 31 23 39 13 </span>
+                    <span class="h3"><i class="fa fa-phone-square"></i> Juillet: <span itemprop="telephone" class="h3" >(33 6) 61 34 18 64 </span></span><br>
+                    <span class="h3"><i class="fa fa-phone-square"></i> Août: <span itemprop="telephone" class="h3" >(33 6) 31 23 39 13 </span></span>
                 </address>
+                <hr class="separator">
                 <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FAlbatrosClubdeplage&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
             </div>
             <div class="col-lg-6 col-md-6 col-md-6 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
