--- a/web/index.html
+++ b/web/index.html
@@ -9,20 +9,20 @@
         <meta content="Albatros Club de Plage accueille les petits et les grands tout l'été sur la grande plage de Quiberon" name="description">
 
 		<!-- icone -->
-        <link rel="shortcut icon" href="/icon/favicon.ico">
-        <link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-touch-icon-76x76.png">
-        <link rel="icon" type="image/png" href="/icon/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/icon/favicon-16x16.png" sizes="16x16">
-        <link rel="icon" type="image/png" href="/icon/favicon-32x32.png" sizes="32x32">
+        <link rel="shortcut icon" href="/dist/icon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/dist/icon/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/dist/icon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/dist/icon/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/dist/icon/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/dist/icon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/dist/icon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/dist/icon/apple-touch-icon-76x76.png">
+        <link rel="icon" type="image/png" href="/dist/icon/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/dist/icon/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/dist/icon/favicon-32x32.png" sizes="32x32">
         <meta name="msapplication-TileColor" content="#f8f8f8">
-        <meta name="msapplication-TileImage" content="/icon/mstile-144x144.png">
-        <meta name="msapplication-config" content="/icon/browserconfig.xml">
+        <meta name="msapplication-TileImage" content="/dist/icon/mstile-144x144.png">
+        <meta name="msapplication-config" content="/dist/icon/browserconfig.xml">
 
         <!-- integrate css -->
         <link rel="stylesheet" href="/dist/css/albatros-club-de-plage.css">
