skip directory in app.yaml

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta content="Albatros Club de Plage accueille les petits et les grands tout l'été sur la grande plage de Quiberon" name="description">
 
-		<!-- icone -->
+		<!-- icon <http://realfavicongenerator.net> -->
         <link rel="shortcut icon" href="/dist/icon/favicon.ico">
         <link rel="apple-touch-icon" sizes="57x57" href="/dist/icon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/dist/icon/apple-touch-icon-114x114.png">
@@ -24,11 +24,10 @@
         <meta name="msapplication-TileImage" content="/dist/icon/mstile-144x144.png">
         <meta name="msapplication-config" content="/dist/icon/browserconfig.xml">
 
-        <!-- integrate css -->
+        <!-- css -->
         <link rel="stylesheet" href="/dist/css/albatros-club-de-plage.css">
-        <!-- integrate css -->
-
 	</head>
+
 	<body data-spy="scroll" data-target=".navbar" ng-controller="MainController">
 
         <div ui-view="navigation"></div>
