--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 
         <!-- Icon generate by http://realfavicongenerator.net -->
         <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icon/apple-touch-icon.png">
